# TambOpt

./: .gitignore  README.md
corsika_application/: CMakeCache.txt  README.md  reading_corsika.ipynb
corsika_application/source/: CMakeLists.txt  c8_air_shower.cpp  c8_air_shower_original.cpp  corsikaExamples.cmake
ml/: combine.py  nn.py  normalization_hit.py  pre_processing_per_hit.py
notebooks/: shower_diagnostics.ipynb
resources/: paper.mplstyle
