cmake_minimum_required (VERSION 3.9)

project (CORSIKA8_examples)
set (CMAKE_VERBOSE_MAKEFILE OFF) # this can be changed with `make VERBOSE=1`

# this is enough to use CORSIKA8
find_package (corsika CONFIG REQUIRED)

# this is only for CORSIKA_REGISTER_EXAMPLE
include ("${CMAKE_CURRENT_SOURCE_DIR}/corsikaExamples.cmake")

# Put binaries in bin directory
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable (c8_air_shower c8_air_shower.cpp)
target_link_libraries (c8_air_shower PRIVATE CORSIKA8::CORSIKA8)
CORSIKA_REGISTER_EXAMPLE (c8_air_shower)

#add_executable (c8_air_shower_simple c8_air_shower_mod.cpp)
#target_link_libraries (c8_air_shower_simple PRIVATE CORSIKA8::CORSIKA8)
#CORSIKA_REGISTER_EXAMPLE (c8_air_shower_simple)

#add_executable (c8_air_shower_failed c8_air_shower_failed.cpp)
#target_link_libraries (c8_air_shower_failed PRIVATE CORSIKA8::CORSIKA8)
#CORSIKA_REGISTER_EXAMPLE (c8_air_shower_failed)
